# RoboFlexv2.1

./: .gitignore  README.md
Firmware/: README.md
Firmware/roboflex_pio/: README.md  hardware_info.md  platformio.ini
Firmware/roboflex_pio/src/: main_dev.cpp
Firmware/roboflex_pio/test/: main.cpp  testing.md
Firmware/six_motors_microROS_udp4_millis_and_map_servo_driver/: six_motors_microROS_udp4_millis_and_map_servo_driver.ino
brainswarm_ws/src/bras_robot_description/: CMakeLists.txt  README.md  package.xml
brainswarm_ws/src/roboflex_description/: CMakeLists.txt  README.md  REAL_HARDWARE.md  SIMULATION.md  package.xml  start_controllers
brainswarm_ws/src/roboflex_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
roboflex_pio/: README.md  hardware_info.md  platformio.ini
roboflex_pio/src/: main.cpp
roboflex_pio/test/: arduno_backup.ino  motor_safety_limits.cpp
roboflex_ros2/roboflex_bringup/: CMakeLists.txt  README.md  REAL_HARDWARE.md  SIMULATION.md  package.xml
roboflex_ros2/roboflex_bringup/config/: ros_gz_bridge.yaml
roboflex_ros2/roboflex_bringup/launch/: hardware_gui.launch.py  joint_state_debug.launch.py  real_hardware.launch.py  sensors_rviz.launch.py  simulation.launch.py  urdf_joint_state_debug.launch.py
roboflex_ros2/roboflex_bringup/rviz/: urdf_joint_state_debug.rviz
roboflex_ros2/roboflex_control/: CMakeLists.txt  README.md  package.xml  roboflex_control.xml  start_controllers
roboflex_ros2/roboflex_control/config/: hardware_joint_position_test_controllers.yaml  real_hardware_controllers.yaml  real_hardware_position_test_controllers.yaml  ros2_controllers.yaml
roboflex_ros2/roboflex_control/include/dynamixel_hardware/: dynamixel_hardware.hpp
roboflex_ros2/roboflex_control/include/roboflex_udp_hardware/: roboflex_udp_hardware.hpp  visiblity_control.h
roboflex_ros2/roboflex_control/launch/: hardware_joint_position_test.launch.py  real_hardware.launch.py  real_hardware_position_test.launch.py
roboflex_ros2/roboflex_control/src/: roboflex_udp_hardware.cpp
roboflex_ros2/roboflex_description/: CMakeLists.txt  README.md  package.xml
roboflex_ros2/roboflex_description/meshes/: base_link.STL  gripper_body_link.STL  gripper_left_link.STL  gripper_right_link.STL  link_1.STL
roboflex_ros2/roboflex_description/urdf/: brainswarm_robotic_arm.urdf  real_hardware.urdf.xacro  roboflex_robotic_arm.urdf  roboflex_robotic_arm.urdf.xacro
roboflex_ros2/roboflex_moveit/: CMakeLists.txt  README.md  package.xml
roboflex_ros2/roboflex_moveit/config/: joint_limits.yaml  joint_limits_sim.yaml  moveit.rviz  moveit_controllers_sim.yaml  roboflex_description.srdf  roboflex_description.urdf.xacro  roboflex_description_sim.srdf
roboflex_ros2/roboflex_moveit/launch/: demo.launch.py  hardware_gui.launch.py  joint_state_debug.launch.py  move_group.launch.py  move_group_sim.launch.py  moveit_rviz.launch.py  rsp.launch.py  (+5 more)
roboflex_ros2/roboflex_pick_place/: README.md  package.xml  setup.cfg  setup.py  task_list.md
roboflex_ros2/roboflex_pick_place/config/: RoboticArm_PNP.json  object_segmentation.yaml  scene_integration.yaml
roboflex_ros2/roboflex_pick_place/launch/: camera_tf_calibration.launch.py  external_camera_scene.launch.py  object_segmentation_replay.launch.py  pick_place_data_prep.launch.py  pick_place_hardware.launch.py  pick_place_operate.launch.py
roboflex_ros2/roboflex_pick_place/resource/: roboflex_pick_place
roboflex_ros2/roboflex_pick_place/roboflex_pick_place/: object_segmentation_node.py  scene_integration_node.py
(+68 files in other folders)
